# Muti-doc-chat-with-Advanced-RAG

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  test.py
faiss_index/session_20251206_112334_f6fefe93/: index.pkl  ingested_meta
faiss_index/session_20251206_122706_aecf7f1c/: index.pkl  ingested_meta
faiss_index/session_20251206_123659_e96ef293/: index.pkl  ingested_meta
faiss_index/session_20251206_130624_b50fe64e/: index.pkl  ingested_meta
multi_doc_chat/config/: config.yaml
multi_doc_chat/document_ingestion/: data_ingestion.py
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: __init__.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  evaluation.ipynb  experiments.ipynb
templates/: index.html
test/: conftest.py
test/unit/: test_ingestion.py  test_retrieval.py
