[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.8",
    "groq>=0.36.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "structlog>=25.5.0",
]
